discussion/kv_engine/150259/150259_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45255: Change ConnHandler::disconnect to folly::Synchronized

This effectively replaces (and reverts) the original fixes for
MB-37702 (http://review.couchbase.org/c/kv_engine/+/121421) and
MB-38521 (http://review.couchbase.org/c/kv_engine/+/124795).

Change-Id: Ide753264207d6ee8e7667358a36fb08ebc9ef11a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-04-01 16:30:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-01 16:51:53.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29802/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: too few arguments to function call, single argument "producer" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29802/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34733/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(563): error C2660: "ActiveStream::next": function does not take 0 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34733/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8076/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34: error: too few arguments to function call, single argument "producer" was not specified [clang-diagnostic-error]
    auto nextItem = stream->next();
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.h:124:5: note: "next" declared here
    std::unique_ptr<DcpResponse> next(DcpProducer& producer);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8076/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: too few arguments to function call, single argument "producer" was not specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8076/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8730/ : FAILURE

Compile error at [2021-04-01T16:35:15.161Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: too few arguments to function call, single argument "producer" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10026/ : FAILURE

Compile error at [2021-04-01T16:33:05.617Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: too few arguments to function call, single argument "producer" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9800/ : FAILURE

Compile error at [2021-04-01T16:34:29.903Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: no matching function for call to ?ActiveStream::next()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9800/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9663/ : FAILURE

Compile error at [2021-04-01T16:34:24.322Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: no matching function for call to ?ActiveStream::next()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17579/ : FAILURE

Compile error at [2021-04-01T16:40:15.252Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:563:34:
error: too few arguments to function call, single argument "producer" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17579/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6620/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
